name:                ovpn-utilities
version:             0.1.0.0
synopsis:            OpenVPN file management utilities 
description:         Please see README.md
homepage:            https://github.com/JAnthelme/ovpn-utilities#readme
license:             BSD3
license-file:        LICENSE
author:              Janthelme
maintainer:          janthelme@gmail.com
copyright:           Copyright: (c) 2016 Janthelme
category:            Data Structure
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ovpn
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , attoparsec, bytestring, filepath, mtl
                       , uuid
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Janthelme/ovpn-utilities
